@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-20T08:12:26Z",
-  "count_outdated" : 113,
-  "uniques_outdated" : 7,
-  "count" : 373,
+  "timestamp" : "2022-05-21T00:42:05Z",
+  "count_outdated" : 130,
+  "uniques_outdated" : 8,
+  "count" : 389,
   "uniques" : 18,
   "views" : [
-    {
-      "timestamp": "2022-05-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 17 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 2,
