@@ -1,12 +1,7 @@
 {
-  "count": 260,
+  "count": 259,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-05-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 2,
