@@ -1,3 +1,10 @@
+2022-05-21T00:42:05Z:
+* notice: last 14d: unq all: 1 259
+* notice: prev accum: outdated-unq outdated-all / unq all: 7 113 / 18 373
+* notice: next accum: outdated-unq outdated-all / unq all: 8 130 / 18 389
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-20T08:12:26Z:
 * notice: last 14d: unq all: 1 260
 * notice: prev accum: outdated-unq outdated-all / unq all: 7 113 / 18 389
